ingress/app1/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  # labels related to deployment resource
  labels:
    app: app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  # Pod
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        #image: joindevops/app1
        image: ramchandrasrcm333/app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-1
  # servicer labels
  labels:
    app: app-1
spec:
  # Service uses the below labels to select the pods
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:160885265516:certificate/94cd8d1f-d89e-4253-b737-30d2f604c296
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:271434548230:certificate/c811cbef-20fc-434f-a98f-a211702794b9
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
  #- host: "app1.daws90s.shop"
  - host: "app1.devpreactice.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-1
            port:
              number: 80
